Fixed Desktop Essential

--- a/Pages/DesktopEssential/desktop-essential.html
+++ b/Pages/DesktopEssential/desktop-essential.html
@@ -123,36 +123,41 @@
               <img src="./Images/menu.png" class="me-2" alt="" /> Category
               <img src="./Images/downArrow.png" class="ms-2" alt="" />
             </button>
-            <div class="category-btn-dropdown">
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu2.png" alt="" />
-                <h2>Office Supplies</h2>
+            <div class="category-btn-dropdown d-flex gap-2">
+              <div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu2.png" alt="" />
+                  <h2>Office Supplies</h2>
+                </div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu4.png" alt="" />
+                  <h2>Papper Products</h2>
+                </div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu10.png" alt="" />
+                  <h2>Ink & Tower</h2>
+                </div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu2.png" alt="" />
+                  <h2>Office Equipment</h2>
+                </div>
               </div>
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu4.png" alt="" />
-                <h2>Papper Products</h2>
-              </div>
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu10.png" alt="" />
-                <h2>Ink & Tower</h2>
-              </div>
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu2.png" alt="" />
-                <h2>Office Equipment</h2>
-              </div>
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu4.png" alt="" />
-                <h2>Technology</h2>
-              </div>
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu10.png" alt="" />
-                <h2>Office Furniture</h2>
-              </div>
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu2.png" alt="" />
-                <h2>Facility</h2>
+              <div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu4.png" alt="" />
+                  <h2>Technology</h2>
+                </div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu10.png" alt="" />
+                  <h2>Office Furniture</h2>
+                </div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu2.png" alt="" />
+                  <h2>Facility</h2>
+                </div>
               </div>
             </div>
+
             <ul class="d-flex gap-3 gap-lg-4 category-list">
               <li><a href="../../index.html"> HOME </a></li>
               <li>
@@ -187,53 +192,64 @@
 
       <!-- Middle Part Begins Here -->
 
-      <div class="container-fluid">
-        <div class="row mx-auto">
+      <div class="container-fluid py-5">
+        <div class="row g-5 mx-auto">
           <h1 class="text-center">
             <span id="topic1">Desktop</span>
             <span id="topic2">Essentials</span>
           </h1>
-          <div class="box1">
-            <div class="box">
-              <img src="./Images/Stitch.png" />
-              <p>Staplers, Pins & Removers</p>
-            </div>
-            <div class="box">
-              <img src="./Images/Punch.png" />
-              <p>Hole Punches</p>
-            </div>
-            <div class="box">
-              <img src="./Images/cutter.png" />
-              <p>Cutter, Paper Knives</p>
+          <div class="col-md-4 img-container">
+            <div>
+              <img src="./Images/1.png" class="img-fluid" alt="" />
+              <p class="img-cap">Staplers, Pins & Removers</p>
             </div>
           </div>
-
-          <div class="box1">
-            <div class="box">
-              <img src="./Images/Scissors.png" />
-              <p>Scissors</p>
-            </div>
-            <div class="box">
-              <img src="./Images/Calculator.png" />
-              <p>Calculators</p>
-            </div>
-            <div class="box">
-              <img src="./Images/Adhesives.png" />
-              <p>Adhesives & Glues</p>
+          <div class="col-md-4 img-container">
+            <div>
+              <img src="./Images/2.png" class="img-fluid" alt="" />
+              <p class="img-cap">Hole Punches</p>
             </div>
           </div>
-          <div class="box1">
-            <div class="box">
-              <img src="./Images/Stamp.png" />
-              <p>Stamps & Stamp Pads</p>
+          <div class="col-md-4 img-container">
+            <div>
+              <img src="./Images/3.png" class="img-fluid" alt="" />
+              <p class="img-cap">Staplers, Pins & Removers</p>
             </div>
-            <div class="box">
-              <img src="./Images/Calculator.png" />
-              <p>Calendars & Planners</p>
+          </div>
+          <div class="col-md-4 img-container">
+            <div>
+              <img src="./Images/4.png" class="img-fluid" alt="" />
+              <p class="img-cap">Staplers, Pins & Removers</p>
             </div>
-            <div class="box">
-              <img src="./Images/Highlighters.png" />
-              <p>Highlighters</p>
+          </div>
+          <div class="col-md-4 img-container">
+            <div>
+              <img src="./Images/5.png" class="img-fluid" alt="" />
+              <p class="img-cap">Staplers, Pins & Removers</p>
+            </div>
+          </div>
+          <div class="col-md-4 img-container">
+            <div>
+              <img src="./Images/6.png" class="img-fluid" alt="" />
+              <p class="img-cap">Staplers, Pins & Removers</p>
+            </div>
+          </div>
+          <div class="col-md-4 img-container">
+            <div>
+              <img src="./Images/7.png" class="img-fluid" alt="" />
+              <p class="img-cap">Staplers, Pins & Removers</p>
+            </div>
+          </div>
+          <div class="col-md-4 img-container">
+            <div>
+              <img src="./Images/8.png" class="img-fluid" alt="" />
+              <p class="img-cap">Staplers, Pins & Removers</p>
+            </div>
+          </div>
+          <div class="col-md-4 img-container">
+            <div>
+              <img src="./Images/9.png" class="img-fluid" alt="" />
+              <p class="img-cap">Staplers, Pins & Removers</p>
             </div>
           </div>
         </div>
