--- a/Pages/Yourcart/yourcart.html
+++ b/Pages/Yourcart/yourcart.html
@@ -11,13 +11,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+
     <link rel="stylesheet" href="./yourcart.css" />
     <link rel="stylesheet" href="./yourcart_responsive.css" />
   </head>
@@ -353,12 +347,15 @@
                 <h2 class="total">$ 0</h2>
               </div>
               <div class="text-center">
-                <button
-                  type="button"
-                  class="continue"
-                  onclick="displayPayment()"
-                >
-                  Secure Checkout
+                <button class="continue">
+                  <a
+                    href="../Payment/payment.html"
+                    type="button"
+                    class="continue"
+                    onclick="displayPayment()"
+                  >
+                    Secure Checkout
+                  </a>
                 </button>
               </div>
             </div>
@@ -625,315 +622,6 @@
     </div>
     <!-- Register Pop up Ends -->
 
-    <!-- Payment Section  -->
-
-    <div class="container-fluid">
-      <div class="row checkout-row mx-auto">
-        <div class="col-lg-6 p-4 checkout-firstHalf">
-          <div class="row">
-            <div
-              class="col-lg2 d-flex justify-content-between align-items-center"
-            >
-              <img
-                src="./Images/checkout-logo.png"
-                class="img-fluid checkout-logo-icon"
-                alt=""
-              />
-              <img
-                src="./Images/close-btn.png"
-                class="img-fluid mobile-close-btn"
-                alt=""
-              />
-              <h1 class="text-center desktop-payment">
-                <span class="y">P</span>ayment
-              </h1>
-            </div>
-            <h1 class="text-center mt-4 mobile-payment">
-              <span class="y">P</span>ayment
-            </h1>
-
-            <div class="col-lg-12">
-              <div
-                class="d-flex checkout-logo gap-4 align-items-center justify-content-center"
-              >
-                <img src="./Images/gpay.png" alt="" class="img-fluid w-100" />
-                <img src="./Images/paypal.png" alt="" class="img-fluid w-100" />
-                <img
-                  src="./Images/apple-pay.png"
-                  alt=""
-                  class="img-fluid w-100"
-                />
-                <img src="./Images/skrill.png" alt="" class="img-fluid w-100" />
-              </div>
-            </div>
-            <div
-              class="col-12 d-flex justify-content-center gap-1 mt-4 align-content-center"
-            >
-              <img
-                src="./Images/line.png"
-                class="img-fluid checkout-line"
-                alt=""
-              />
-              <p class="or-con">OR CONTINUE BELOW TO PAY WITH A CREDIT CARD</p>
-              <img
-                src="./Images/line.png"
-                class="img-fluid checkout-line"
-                alt=""
-              />
-            </div>
-
-            <form action="">
-              <div class="col-12">
-                <div class="d-flex flex-column">
-                  <label class="email-label" for="email"
-                    >Contact-information</label
-                  >
-                  <input
-                    class="w-100"
-                    type="text"
-                    placeholder="Email"
-                    id="email"
-                    type="email"
-                  />
-                  <div>
-                    <input id="checkbox" type="checkbox" class="checkbox" />
-                    <label class="checkbox-label" for="checkbox"
-                      >Email me with news and offers</label
-                    >
-                  </div>
-                </div>
-              </div>
-              <div class="col-12">
-                <h1 class="address">Shiping Address</h1>
-              </div>
-
-              <div class="col-lg-12 my-3 d-lg-flex gap-4">
-                <input
-                  type="text"
-                  class="w-100"
-                  id="email"
-                  placeholder="First Name"
-                />
-                <input
-                  type="text"
-                  class="w-100 my-3 my-lg-0"
-                  id="email"
-                  placeholder="Last Name"
-                />
-              </div>
-              <div class="my-3">
-                <input
-                  type="text "
-                  id="email"
-                  class="w-100"
-                  placeholder="Company (required for business addresses)"
-                />
-              </div>
-              <div class="my-3">
-                <input
-                  type="text "
-                  id="email"
-                  class="w-100"
-                  placeholder="Address"
-                />
-              </div>
-              <div>
-                <input
-                  type="text "
-                  id="email"
-                  class="w-100"
-                  placeholder="Appartment,suite,etc.  (optional)"
-                />
-              </div>
-              <div class="my-3">
-                <input
-                  type="text "
-                  id="email"
-                  class="w-100"
-                  placeholder="City"
-                />
-              </div>
-              <div class="d-flex gap-3">
-                <select id="country " name="country" class="form__select">
-                  <option value="">Select Country</option>
-                  <option selected value="USA">United States</option>
-                  <option value="CAN">Canada</option>
-                  <option value="MEX">Mexico</option>
-                  <!-- add more countries as needed -->
-                </select>
-
-                <select id="state" name="state" class="form__select">
-                  <option value="">State</option>
-                  <!-- populate with states/provinces based on selected country -->
-                </select>
-
-                <input
-                  type="text"
-                  id="email"
-                  name="zip"
-                  class="form__input"
-                  pattern="[0-9]*"
-                  maxlength="10"
-                  placeholder="Zip code"
-                  required
-                />
-              </div>
-              <div>
-                <input
-                  type="text "
-                  id="email"
-                  class="w-100"
-                  placeholder="Phone (optional)"
-                />
-              </div>
-              <div class="col-12 d-flex my-4 justify-content-end">
-                <button class="continue" type="button">
-                  Continue Shipping
-                </button>
-              </div>
-            </form>
-          </div>
-          <hr />
-        </div>
-        <div class="col-lg-6 p-4">
-          <div class="row">
-            <div class="col-12">
-              <div class="d-flex justify-content-end">
-                <img
-                  src="./Images/close-btn.png"
-                  class="img-fluid desktop-close-btn"
-                  alt=""
-                />
-              </div>
-            </div>
-            <div class="col-12 py-5">
-              <div
-                class="d-flex align-items-center border border-dark border-top-0 border-start-0 border-end-0 justify-content-center pb-5 w-100 justify-content-between"
-              >
-                <div class="d-flex align-items-center cart-num-wrap gap-3">
-                  <img src="./Images/item.png" class="img-fluid" alt="" />
-                  <h5>Product name</h5>
-                  <h2 class="cart-num">1</h2>
-                </div>
-                <div>
-                  <h5>$105.00</h5>
-                </div>
-              </div>
-            </div>
-
-            <div
-              class="col-12 d-flex flex-column align-items-center justify-content-center"
-            >
-              <div
-                class="d-flex gap-4 align-items-center border border-dark border-top-0 border-start-0 border-end-0 justify-content-center pb-5 w-100"
-              >
-                <input
-                  type="text"
-                  class="gift-card"
-                  name=""
-                  placeholder="Gift card"
-                  id=""
-                />
-                <button class="apply">APPLY</button>
-              </div>
-            </div>
-
-            <div class="col-12">
-              <div
-                class="border border-dark border-top-0 border-start-0 border-end-0 py-5 w-100"
-              >
-                <div class="d-flex justify-content-between align-items-center">
-                  <h4 class="subtotal">Subtotal</h4>
-                  <h5>$105.00</h5>
-                </div>
-                <div class="d-flex justify-content-between align-items-center">
-                  <h6 class="w-50">
-                    ** Expedited orders cannot be shipped or delivered on
-                    weekends/holidays not can they be shipped to a PO Box.
-                  </h6>
-                  <h6>Calculated at next step</h6>
-                </div>
-              </div>
-
-              <div
-                class="col-12 py-4 d-flex justify-content-between align-items-center"
-              >
-                <h5>Total</h5>
-                <h5>USD $105.00</h5>
-              </div>
-            </div>
-
-            <div class="col-12 chat-wrap">
-              <button class="chat">Chat</button>
-              <div class="green"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Payment Section Ends -->
-
-    <!-- Order succcess  -->
-    <div class="container-fluid d-none">
-      <div class="row mx-auto order-sec">
-        <div class="col-12 d-flex justify-content-end">
-          <img src="./Images/close-btn.png" alt="" />
-        </div>
-        <div
-          class="col-12 d-flex justify-content-center align-items-center gap-5 flex-column"
-        >
-          <img
-            src="./Images/footer-logo.png"
-            class="img-fluid order-logo"
-            alt=""
-          />
-          <img
-            src="./Images/success.png"
-            class="img-fluid order-success-logo"
-            alt=""
-          />
-          <h5>Thank you for your purchase</h5>
-          <h2 class="text-center">
-            Your order ID is : 12345678900 <br />
-            You will receive an order confirmation email with details of your
-            order.
-          </h2>
-
-          <button class="continue">
-            <a href="/" class="continue">Continue to Shopping</a>
-          </button>
-        </div>
-      </div>
-    </div>
-    <!-- Order succcess Ends -->
-    <!-- Order Failure   -->
-    <div class="container-fluid d-none">
-      <div class="row mx-auto order-sec">
-        <div class="col-12 d-flex justify-content-end">
-          <img src="./Images/close-btn.png" alt="" />
-        </div>
-        <div
-          class="col-12 d-flex justify-content-center align-items-center gap-5 flex-column"
-        >
-          <img
-            src="./Images/footer-logo.png"
-            class="img-fluid order-logo"
-            alt=""
-          />
-          <img
-            src="./Images/fail.png"
-            class="img-fluid order-success-logo"
-            alt=""
-          />
-          <h5>Sorry, payment failed</h5>
-          <h2 class="text-center">Please try a different payment method.</h2>
-
-          <button class="continue">
-            <a href="/" class="continue">Back to my order</a>
-          </button>
-        </div>
-      </div>
-    </div>
     <!-- Order Failure Ends -->
   </body>
   <script
