--- a/Pages/DealsOfTheDay/dealsoftheday.html
+++ b/Pages/DealsOfTheDay/dealsoftheday.html
@@ -122,36 +122,41 @@
               <img src="./Images/menu.png" class="me-2" alt="" /> Category
               <img src="./Images/downArrow.png" class="ms-2" alt="" />
             </button>
-            <div class="category-btn-dropdown">
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu2.png" alt="" />
-                <h2>Office Supplies</h2>
+            <div class="category-btn-dropdown d-flex gap-2">
+              <div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu2.png" alt="" />
+                  <h2>Office Supplies</h2>
+                </div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu4.png" alt="" />
+                  <h2>Papper Products</h2>
+                </div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu10.png" alt="" />
+                  <h2>Ink & Tower</h2>
+                </div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu2.png" alt="" />
+                  <h2>Office Equipment</h2>
+                </div>
               </div>
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu4.png" alt="" />
-                <h2>Papper Products</h2>
-              </div>
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu10.png" alt="" />
-                <h2>Ink & Tower</h2>
-              </div>
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu2.png" alt="" />
-                <h2>Office Equipment</h2>
-              </div>
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu4.png" alt="" />
-                <h2>Technology</h2>
-              </div>
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu10.png" alt="" />
-                <h2>Office Furniture</h2>
-              </div>
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu2.png" alt="" />
-                <h2>Facility</h2>
+              <div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu4.png" alt="" />
+                  <h2>Technology</h2>
+                </div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu10.png" alt="" />
+                  <h2>Office Furniture</h2>
+                </div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu2.png" alt="" />
+                  <h2>Facility</h2>
+                </div>
               </div>
             </div>
+
             <ul class="d-flex gap-3 gap-xl-4 category-list">
               <li><a href="../../index.html"> HOME </a></li>
               <li>
