--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
       <div class="container-fluid catalog my-4 my-md-5">
         <div class="row g-3 g-md-4 g-xl-5 mx-auto">
           <div class="col-12 p-0" style="margin-bottom: -2rem">
-            <h1 class="">Catalog</h1>
+            <h1 class="mb-4 mb-xl-0">Catalog</h1>
           </div>
           <div class="col-6 p-0 col-md-4 col-xl-3">
             <div class="card" style="max-width: 18rem">
