fixed Dsktop essential page

--- a/Pages/DesktopEssential/desktop-essential.html
+++ b/Pages/DesktopEssential/desktop-essential.html
@@ -192,7 +192,7 @@
 
       <!-- Middle Part Begins Here -->
 
-      <div class="container-fluid py-5">
+      <div class="container-fluid abc">
         <div class="row g-5 mx-auto">
           <h1 class="text-center">
             <span id="topic1">Desktop</span>
