--- a/index.html
+++ b/index.html
@@ -1079,14 +1079,14 @@
               Receive news about new products, promotions, discounts, contests
             </p>
             <div
-              class="d-flex text-center justify-content-center align-items-center"
+              class="d-flex text-center px-5 px-sm-0 justify-content-center align-items-center"
             >
               <input
                 type="text"
                 placeholder="Your Email Address"
                 class="form-control"
               />
-              <button class="ms-md-3 ms-1 text-center">Register</button>
+              <button class="ms-md-3 ms-1 px-1 text-center">Register</button>
             </div>
           </div>
         </div>
