finished Js part

--- a/Pages/Wishlist/wishlist.html
+++ b/Pages/Wishlist/wishlist.html
@@ -108,7 +108,9 @@
               <img src="./Images/menu.png" class="me-2" alt="" /> Category
               <img src="./Images/downArrow.png" class="ms-2" alt="" />
             </button>
-            <div class="category-btn-dropdown d-flex gap-2">
+            <div
+              class="category-btn-dropdown d-flex flex-column flex-md-row gap-2"
+            >
               <div>
                 <div class="d-flex gap-3 align-items-center">
                   <img src="./Images/menu2.png" alt="" />
@@ -142,7 +144,6 @@
                 </div>
               </div>
             </div>
-
             <ul class="d-flex gap-3 gap-xl-4 category-list">
               <li><a href="../../index.html"> HOME </a></li>
               <li>
