--- a/Pages/AboutUs/about.html
+++ b/Pages/AboutUs/about.html
@@ -97,7 +97,9 @@
               <img src="./Images/menu.png" class="me-2" alt="" /> Category
               <img src="./Images/downArrow.png" class="ms-2" alt="" />
             </button>
-            <div class="category-btn-dropdown d-flex gap-2">
+            <div
+              class="category-btn-dropdown d-flex flex-column flex-md-row gap-2"
+            >
               <div>
                 <div class="d-flex gap-3 align-items-center">
                   <img src="./Images/menu2.png" alt="" />
