--- a/Pages/Yourcart/yourcart.html
+++ b/Pages/Yourcart/yourcart.html
@@ -105,34 +105,40 @@
               <img src="./Images/menu.png" class="me-2" alt="" /> Category
               <img src="./Images/downArrow.png" class="ms-2" alt="" />
             </button>
-            <div class="category-btn-dropdown">
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu2.png" alt="" />
-                <h2>Office Supplies</h2>
+            <div
+              class="category-btn-dropdown d-flex flex-column flex-md-row gap-2"
+            >
+              <div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu2.png" alt="" />
+                  <h2>Office Supplies</h2>
+                </div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu4.png" alt="" />
+                  <h2>Papper Products</h2>
+                </div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu10.png" alt="" />
+                  <h2>Ink & Tower</h2>
+                </div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu2.png" alt="" />
+                  <h2>Office Equipment</h2>
+                </div>
               </div>
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu4.png" alt="" />
-                <h2>Papper Products</h2>
-              </div>
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu10.png" alt="" />
-                <h2>Ink & Tower</h2>
-              </div>
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu2.png" alt="" />
-                <h2>Office Equipment</h2>
-              </div>
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu4.png" alt="" />
-                <h2>Technology</h2>
-              </div>
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu10.png" alt="" />
-                <h2>Office Furniture</h2>
-              </div>
-              <div class="d-flex gap-3 align-items-center">
-                <img src="./Images/menu2.png" alt="" />
-                <h2>Facility</h2>
+              <div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu4.png" alt="" />
+                  <h2>Technology</h2>
+                </div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu10.png" alt="" />
+                  <h2>Office Furniture</h2>
+                </div>
+                <div class="d-flex gap-3 align-items-center">
+                  <img src="./Images/menu2.png" alt="" />
+                  <h2>Facility</h2>
+                </div>
               </div>
             </div>
             <ul class="d-flex gap-3 gap-xl-4 category-list">
@@ -168,14 +174,10 @@
       <!-- Category Ends -->
 
       <!-- Cart Section  -->
-
-      <div class="container-fluid">
-        <div class="row main mx-auto">
-          <div class="col-12">
-            <h1 class="text-center my-5" id="noItem">
-              <span class="y">Y</span>our Cart
-            </h1>
-          </div>
+      <h1 class="text-center"><span class="y">Y</span>our Cart</h1>
+      <div class="container-fluid main-mobile my-4">
+        <div class="row gx-3 mx-auto" id="mobile-cart">
+          <div class="col-12"></div>
           <div class="col-12">
             <div class="row">
               <div class="col-12 px-5">
@@ -223,8 +225,8 @@
                 <h2 id="subtotal" class="subtotal">$ 0</h2>
               </div>
               <div class="d-flex justify-content-between">
-                <h4 id="est-ship" class="mt-2">Estimated shipping :</h4>
-                <h2 class="estimated-shipping">$ 0</h2>
+                <h4 class="mt-2">Estimated shipping :</h4>
+                <h2 id="est-ship" class="estimated-shipping">$ 0</h2>
               </div>
               <div class="d-flex justify-content-between">
                 <h4 class="mt-2">Total :</h4>
