--- a/index.html
+++ b/index.html
@@ -518,6 +518,7 @@
           &copy; Copyright Awali Starionary WLL 2023. All rights reserved.
         </p>
       </div>
+    </div>
       <!-- Footer Ends -->
     </div>
 
